# SyncNesto-backend

./: .gitignore  AUTH_DESIGN_CHECKLIST.md  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0a1b2c3d4e5f_add_database_comments.py  0b1c2d3e4f5a_add_task_comments_and_tags.py  3f6b2c9d1a7e_create_rbac_and_projects.py  6c4a9b2e8d31_add_key_to_roles.py  8e4d9a3b2c10_add_is_admin_to_users.py  9b7c1d2e3f44_add_version_to_projects.py  a4d8e2f1c9b0_add_version_to_users_and_project_members.py  a6b7c8d9e0f1_create_requirement_sections.py  b1c2d3e4f5a6_create_requirement_tables.py  b7c8d9e0f1a2_create_requirement_open_issues.py  bf357189210a_create_users_table.py  c2d3e4f5a6b7_create_requirement_child_tables.py  c7e9a1b2d4f6_add_profile_fields_to_users.py  c8d9e0f1a2b3_create_requirement_target_comments.py  d1f2a3b4c5e6_rename_avatar_url_to_avatar_key.py  d3e4f5a6b7c8_create_sessions_table.py  d9e0f1a2b3c4_create_requirement_approvals.py  e0f1a2b3c4d5_create_requirement_relations.py  e2f3a4b5c6d7_set_default_avatar_key.py  e4f5a6b7c8d9_create_login_attempts_table.py  f1a2b3c4d5e6_create_task_management_tables.py  f4a5b6c7d8e9_expand_project_master_fields.py  f5a6b7c8d9e0_create_audit_logs_table.py
app/: main.py
app/core/: auth.py  auth_cookie.py  config.py  csrf.py  error_messages.py  exception_handlers.py  exceptions.py  logging.py  middleware.py  security.py
app/db/: base.py  session.py
docs/: database-er.drawio  frontend-authorization.md
scripts/: cleanup_audit_logs.py  seed_admin.py  seed_rbac.py
tests/: conftest.py  test_health.py
(+82 files in other folders)
