[project]
name = "syncnesto-backend"
version = "0.1.0"
description = "Backend API for Syncnesto."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.18.4",
    "email-validator>=2.0.0",
    "fastapi==0.121.1",
    "psycopg2==2.9.12",
    "pydantic==2.12.4",
    "SQLAlchemy==2.0.49",
    "uvicorn==0.38.0",
]

[project.optional-dependencies]
dev = []

[tool.pyright]
venvPath = "."
venv = "venv"
pythonVersion = "3.14"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
